fix: quote elements spacing adjustments

--- a/src/components/organisms/SectionQuotes.module.css
+++ b/src/components/organisms/SectionQuotes.module.css
@@ -2,15 +2,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: calc(var(--spacer) * 2);
-  margin: calc(var(--spacer) * 4) auto;
-  max-width: var(--break-point--small);
+  gap: var(--spacer);
+  margin: calc(var(--spacer) * 2) auto;
 }
 
 .profilePicture {
   display: none;
-  width: 7rem;
-  height: 7rem;
+  width: 5rem;
+  height: 5rem;
   margin: 0;
   border-radius: 50%;
   filter: grayscale(1) opacity(0.8);
@@ -27,6 +26,7 @@
 
 .quote {
   margin: 0 var(--spacer);
+  max-width: var(--break-point--small);
 }
 
 .text {
@@ -40,7 +40,8 @@
 
 @media screen and (min-width: 50rem) {
   .container {
-    max-width: var(--break-point--medium);
+    gap: calc(var(--spacer) * 2);
+    margin: calc(var(--spacer) * 4) auto;
   }
   .images {
     display: flex;
@@ -50,11 +51,17 @@
   }
   .profilePicture {
     display: block;
+    width: 7rem;
+    height: 7rem;
+  }
+  .quote {
+    max-width: var(--break-point--medium);
   }
   .text {
     font-size: var(--font-size-h2);
   }
   .name {
+    margin-right: var(--spacer);
     text-align: end;
     font-size: var(--font-size-large);
   }
